Change to .env for serviceAccount.json path

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-GOOGLE_APPLICATION_CREDENTIALS="C:\Users\bha38\BalajiHA\Projects\JsProjects\WorkNotifSys0\Code\serviceAccount.json"
+GOOGLE_APPLICATION_CREDENTIALS="./serviceAccount.json"
 PORT="3000"
 HOST="localhost"
 HOST_URL="localhost:3000/notifications"
