Notification_Interval set to 1800 seconds

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 GOOGLE_APPLICATION_CREDENTIALS="./serviceAccount.json"
 PORT="3000"
 HOST="localhost"
-HOST_URL="localhost:3000/notifications"
+# HOST_URL="localhost:3000/notifications"
+HOST_URL="https://wns-server.onrender.com/notifications"
 API_KEY="AIzaSyBr65BMMRlBRKovD-82QQP-_5hRW0wmrp8"
 AUTH_DOMAIN="work-notifications-edc6e.firebaseapp.com"
 PROJECT_ID="work-notifications-edc6e"
@@ -10,4 +11,4 @@ MESSAGING_SENDER_ID="383926962106"
 APP_ID="1:383926962106:web:58ab405779baa422efff83"
 LOGIN_EMAIL="balah400@gmail.com"
 LOGIN_PWD="FiBalaji1!"
-NOTIFICATION_INTERVAL=15
+NOTIFICATION_INTERVAL=1800  # in Seconds
